crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__small_multi_schema_sequential_snapshot@small_multi_schema_sequential_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Users {
  id Int @id
  display_name String?
  posts Posts[]

  @@map("users")
}

model Posts {
  id Int @id
  user_id Int
  user Users @relation(fields: [user_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  title String

  @@map("posts")
}
