crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__small_multi_schema_sequential_snapshot@small_multi_schema_sequential_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "users")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub display_name: Option<String>,
    #[sea_orm(has_many)]
    pub posts: HasMany<super::posts::Entity>,
}

vespera::schema_type!(Schema from Model, name = "UsersSchema");
impl ActiveModelBehavior for ActiveModel {}


use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "posts")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub user_id: i32,
    pub title: String,
    #[sea_orm(belongs_to, from = "user_id", to = "id")]
    pub user: HasOne<super::users::Entity>,
}

vespera::schema_type!(Schema from Model, name = "PostsSchema");
impl ActiveModelBehavior for ActiveModel {}
