crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__string_default_snapshot@string_default_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const stringDefaults = pgTable("string_defaults", {
  id: integer("id").primaryKey(),
  status: text("status").notNull().default("active"),
});
