crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__string_default_snapshot@string_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 204
expression: rendered
---
model StringDefaults {
  id Int @id
  status String @default("active")

  @@map("string_defaults")
}
